# week-6-backend

./: Cargo.toml
src/: main.rs
src/controllers/: mod.rs
src/controllers/auth_controllers/: auth_finish.rs  auth_start.rs  logout.rs  mod.rs  register_finish.rs  register_start.rs
src/controllers/auth_controllers/models/: mod.rs
src/controllers/poll_controllers/: cast_vote.rs  change_vote.rs  check_vote.rs  close_poll.rs  create_poll.rs  get_poll.rs  get_results.rs  get_user_polls.rs  mod.rs  polls.rs  reset_poll.rs  sse_test.html
src/controllers/poll_controllers/models/: mod.rs
src/db/: connection.rs
src/middleware/: jwt.rs
src/models/: mod.rs  passkey_models.rs  poll_models.rs  user_models.rs  vote_record_models.rs
src/routes/: auth_routes.rs  mod.rs  poll_routes.rs
src/state/: mod.rs
src/utils/: auth.rs  error.rs  mod.rs  session.rs  webauthn.rs
