[package]
name = "backend"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json","macros"] }
# http servers and middlewares from this
tokio = { version = "1", features = ["full"] }
# the async runtime
serde = { version = "1", features = ["derive"] }
# converting rust structs to json
serde_json = "1"
mongodb = "3.4.1"
# to connect to mongodb , waise like mongoose
dotenvy = "0.15"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3.31"
async-stream = "0.3"
tokio-stream = "0.1"

futures-util = "0.3"
jsonwebtoken = "9"

axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"